--- a/.gitignore
+++ b/.gitignore
@@ -4,3 +4,5 @@ prediction-of-asteroid-diameter.zip
 Asteriod-Diameter-Prediction/Asteroid_Updated.csv
 .ipynb_checkpoints/asteriod_diameter_prediction-checkpoint.ipynb
 Asteriod-Diameter-Prediction/Asteroid.csv
+Asteroid_Updated.csv
+Asteroid.csv
